# signaldesk

./: .coderabbit.yaml  .env.example  .gitignore  AGENTS.md  Makefile  README.md  architecture.md  docker-compose.yml  pyproject.toml  roadmap.md  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml
apps/web/: README.md
docs/: agent-development-loop.md  agent-heartbeat-loop.md  backtesting-evaluation.md  cli-json-contract.md  context-pack-template.md  dependency-security.md  enhanced-context.md  llm-explanation-layer.md  local-check-parity.md  observability.md  persistence-caching-scheduling.md  product-contract.md  provider-data-redistribution.md  reporting.md  reviewer-aligner-integrator-agent.md  sandbox.md
docs/schemas/: signaldesk.backtest.setup_batch.v1.schema.json  signaldesk.backtest.setup_labels.v1.schema.json  signaldesk.backtest.setup_replay.v1.schema.json  (+3 more)
scripts/: agent_heartbeat.py  agent_preflight.py  dependency_security_check.py  docs_check.py  merge_readiness.py
tests/: test_agent_heartbeat.py  test_agent_preflight.py  test_api.py  test_backtesting.py  test_cli.py  test_dependency_security_check.py  test_docs_check.py  test_indicators.py  test_llm_prompt_payload.py  test_models.py  test_provider_cache.py  test_providers.py  test_risks.py  test_runtime_smoke_contract.py  test_scoring.py  test_settings.py  test_signal_card_presentation.py  test_signal_cards.py  test_signal_outcomes.py
watchlists/: default.yaml
(+4 files in other folders)
