[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signaldesk"
version = "0.1.0"
description = "TA-first market intelligence sandbox."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10.0",
  "pytest>=8.2.0",
  "ruff>=0.5.0",
  "tox>=4.15.0",
]
yfinance = [
  "yfinance>=0.2.40",
]

[project.scripts]
signaldesk = "signaldesk_cli.main:app"

[tool.setuptools.packages.find]
where = ["packages/backend/src", "packages/cli/src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["packages/backend/src", "packages/cli/src", "tests"]
mypy_path = ["packages/backend/src", "packages/cli/src"]
